fix overflow on labels

--- a/src/app/ui/location-cards/location-cards.component.scss
+++ b/src/app/ui/location-cards/location-cards.component.scss
@@ -235,7 +235,7 @@
         margin-right: 0;
 
         span {
-          overflow: auto;
+          overflow: visible;
           white-space: normal;
         }
       }
